<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".SideMenu.FAQ_Side_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loginBackground">


        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ1ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toTopOf="@+id/FAQTextViewD2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Faqimg"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="Does Funbayy Steal your data ?"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp"
            app:underline_link="true" />

        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ2ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toTopOf="@+id/FAQTextViewD3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FAQTextViewD1"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="What is the purpose of Funbayy ?"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp"
            app:underline_link="true" />

        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ3ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toTopOf="@+id/FAQTextViewD5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FAQTextViewD2"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="Is Funbayy Legal ?"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp" />

        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ6ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FAQTextViewD6"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="Not able to watch some listed content"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp"
            app:underline_link="true" />

        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ4ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toTopOf="@+id/FAQTextViewD6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FAQTextViewD3"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="No download option for whole season ?"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp"
            app:underline_link="true" />

        <hakobastvatsatryan.DropdownTextView
            android:id="@+id/FAQTextViewD6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:arrow_drawable="@drawable/drop_down_arrow"
            app:bg_drawable_expanded="@drawable/expandable_textview_back"
            app:bg_drawable_regular="@drawable/expandable_textview_back"
            app:content_padding="12dp"
            app:content_text="@string/FAQ5ans"
            app:content_text_color="@color/readTextCol"
            app:content_text_size="14sp"
            app:expand_duration="300"
            app:layout_constraintBottom_toTopOf="@+id/FAQTextViewD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FAQTextViewD5"
            app:panel_padding="12dp"
            app:title_font="@font/demofont"
            app:title_text="No SearchBar for Anime ?"
            app:title_text_color="@color/FunbayNameCol"
            app:title_text_color_expanded="@color/FunbayNameCol"
            app:title_text_size="120dp"
            app:underline_link="true" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/Faqimg"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile_fb_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            app:riv_border_color="@color/bottomNavChipCol"
            app:riv_border_width="2dp"
            app:riv_corner_radius="100dp">

        </com.makeramen.roundedimageview.RoundedImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>